; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bna/extr_bfa_ioc.c_bfa_iocpf_sm_enabling_entry.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bna/extr_bfa_ioc.c_bfa_iocpf_sm_enabling_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfa_iocpf = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32, %struct.TYPE_3__*, i32 }
%struct.TYPE_3__ = type { i32 (i32)* }

@jiffies = common dso_local global i64 0, align 8
@BFA_IOC_TOV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bfa_iocpf*)* @bfa_iocpf_sm_enabling_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bfa_iocpf_sm_enabling_entry(%struct.bfa_iocpf* %0) #0 {
  %2 = alloca %struct.bfa_iocpf*, align 8
  store %struct.bfa_iocpf* %0, %struct.bfa_iocpf** %2, align 8
  %3 = load %struct.bfa_iocpf*, %struct.bfa_iocpf** %2, align 8
  %4 = getelementptr inbounds %struct.bfa_iocpf, %struct.bfa_iocpf* %3, i32 0, i32 0
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 2
  %7 = load i64, i64* @jiffies, align 8
  %8 = load i32, i32* @BFA_IOC_TOV, align 4
  %9 = call i64 @msecs_to_jiffies(i32 %8)
  %10 = add nsw i64 %7, %9
  %11 = call i32 @mod_timer(i32* %6, i64 %10)
  %12 = load %struct.bfa_iocpf*, %struct.bfa_iocpf** %2, align 8
  %13 = getelementptr inbounds %struct.bfa_iocpf, %struct.bfa_iocpf* %12, i32 0, i32 0
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 1
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32 (i32)*, i32 (i32)** %17, align 8
  %19 = load %struct.bfa_iocpf*, %struct.bfa_iocpf** %2, align 8
  %20 = getelementptr inbounds %struct.bfa_iocpf, %struct.bfa_iocpf* %19, i32 0, i32 0
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = call i32 %18(i32 %23)
  %25 = load %struct.bfa_iocpf*, %struct.bfa_iocpf** %2, align 8
  %26 = getelementptr inbounds %struct.bfa_iocpf, %struct.bfa_iocpf* %25, i32 0, i32 0
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %26, align 8
  %28 = call i32 @bfa_ioc_send_enable(%struct.TYPE_4__* %27)
  ret void
}

declare dso_local i32 @mod_timer(i32*, i64) #1

declare dso_local i64 @msecs_to_jiffies(i32) #1

declare dso_local i32 @bfa_ioc_send_enable(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
